--- a/package.json
+++ b/package.json
@@ -16,10 +16,13 @@
     "@fortawesome/free-solid-svg-icons": "^7.0.1",
     "@fortawesome/react-fontawesome": "^3.0.2",
     "@popperjs/core": "^2.11.8",
+    "@reduxjs/toolkit": "^2.9.0",
     "axios": "^1.12.2",
     "bootstrap": "^5.3.8",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-google-charts": "^5.2.1",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^7.9.1"
   },
   "devDependencies": {
