--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-dom": "^19.1.1",
     "react-google-charts": "^5.2.1",
     "react-redux": "^9.2.0",
-    "react-router-dom": "^7.9.1"
+    "react-router-dom": "^7.9.1",
+    "sweetalert2": "^11.23.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
