--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-google-charts": "^5.2.1",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.9.1",
+    "react-toastify": "^11.0.5",
     "sweetalert2": "^11.23.0"
   },
   "devDependencies": {
