--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "@reduxjs/toolkit": "^2.9.0",
     "axios": "^1.12.2",
     "bootstrap": "^5.3.8",
+    "chart.js": "^4.5.1",
     "react": "^19.1.1",
+    "react-chartjs-2": "^5.3.1",
     "react-dom": "^19.1.1",
     "react-google-charts": "^5.2.1",
     "react-redux": "^9.2.0",
